sandbox/output
Anagram.java:6: error: cannot find symbol
        return Arrays.asList("a");
               ^
  symbol:   variable Arrays
  location: class Anagram
1 error
